fix overflow when labels in task bottom take too much space

--- a/css/stylesheet-properties.css
+++ b/css/stylesheet-properties.css
@@ -189,6 +189,8 @@ th {
 .bottom {
   padding: 5px;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .label {
